--- a/app/src/main/res/layout/layout_navigation_view.xml
+++ b/app/src/main/res/layout/layout_navigation_view.xml
@@ -1,77 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/app_background">
+<layout>
 
-    <FrameLayout
-        android:id="@+id/frameLayout2"
+    <data>
+
+        <import type="com.theshoremedia.BuildConfig" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="@dimen/small_margin"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:background="@color/app_background">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/ivCloseDrawer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginEnd="@dimen/default_margin"
-            android:src="@drawable/ic_clear_24px" />
-
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/frameLayout2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
+            android:layout_marginTop="@dimen/small_margin"
+            android:gravity="center"
             android:orientation="vertical"
-            android:paddingTop="@dimen/large_margin">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/img_header_bg"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:src="@drawable/logo_text" />
+                android:id="@+id/ivCloseDrawer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/default_margin"
+                android:src="@drawable/ic_clear_24px" />
 
-            <View
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="@dimen/small_margin"
-                android:layout_marginBottom="@dimen/extra_small_margin"
-                android:background="@color/grey" />
-        </LinearLayout>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/large_margin">
 
-    </FrameLayout>
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/img_header_bg"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:src="@drawable/logo_text" />
 
-    <include
-        android:id="@+id/includeRecycler"
-        layout="@layout/layout_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/viewDividerBottom"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/small_margin"
+                    android:layout_marginBottom="@dimen/extra_small_margin"
+                    android:background="@color/grey" />
+            </LinearLayout>
 
-    <View
-        android:id="@+id/viewDividerBottom"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/divider_height"
-        android:layout_marginBottom="@dimen/extra_small_margin"
-        android:background="@color/dividerColor"
-        app:layout_constraintBottom_toTopOf="@+id/tvBuildVersion" />
+        </FrameLayout>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvBuildVersion"
-        style="@style/textView"
-        android:layout_marginBottom="@dimen/extra_small_margin"
-        android:text="@string/small_dummy_text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <include
+            android:id="@+id/includeRecycler"
+            layout="@layout/layout_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/viewDividerBottom"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />
+
+        <View
+            android:id="@+id/viewDividerBottom"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/divider_height"
+            android:layout_marginBottom="@dimen/extra_small_margin"
+            android:background="@color/dividerColor"
+            app:layout_constraintBottom_toTopOf="@+id/tvBuildVersion" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvBuildVersion"
+            style="@style/textView"
+            android:layout_marginBottom="@dimen/extra_small_margin"
+            android:text="@{`Build Version- ` + BuildConfig.VERSION_NAME}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
