--- a/app/src/main/res/layout/layout_recycler_view.xml
+++ b/app/src/main/res/layout/layout_recycler_view.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/transparent">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -28,6 +29,8 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
+            android:visibility="gone"
+            tools:visibility="visible"
             android:layout_height="320dp"
             app:layout_constraintBottom_toTopOf="@+id/tvConfused"
             app:layout_constraintEnd_toEndOf="parent"
