--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,10 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <item name="android:textColorPrimary">@color/black</item>
-        <item name="android:textColorSecondary">@color/black</item>
-
+        <item name="android:textColorPrimary">@color/app_black</item>
+        <item name="android:textColorSecondary">@color/app_black</item>
     </style>
+
 
 
     <style name="textView" parent="Widget.AppCompat.TextView">
@@ -66,7 +66,6 @@
         <item name="android:textSize">@dimen/btn_text_size</item>
         <item name="android:textAllCaps">true</item>
     </style>
-
 
 
     <style name="defaultBtnSmallStyle" parent="defaultBtnStyle">
