--- a/app/src/main/res/layout/row_news_source_swipeable.xml
+++ b/app/src/main/res/layout/row_news_source_swipeable.xml
@@ -32,7 +32,7 @@
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:alpha=".5"
-                android:background="@color/bg_error_reg_lite"
+                android:background="@color/bg_error_red"
                 android:minWidth="70dp"
                 android:minHeight="65dp"
                 app:layout_constraintBottom_toBottomOf="parent"
