--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,6 @@
     <color name="white">#FFFFFF</color>
     <color name="grey">#C4C4C4</color>
     <color name="blue">#3F51B5</color>
-    <color name="shadow">#80000000</color>
 
 
     <color name="app_background">@color/white</color>
@@ -21,13 +20,11 @@
 
     <color name="bg_edit_text_grey">#F6F6F6</color>
     <color name="bg_error_red">#FF9494</color>
+    <color name="bg_success_green">#883BBC7C</color>
     <color name="bg_card_grey">#FAFAFA</color>
     <color name="dividerColor">#E7EDF1</color>
-    <color name="bg_error_reg_lite">#D44333</color>
 
     <color name="btnBgColorRed">#ED1C24</color>
     <color name="btnBgColorGrey">#4c5156</color>
-    <color name="errorBgColor">#FFE2E3</color>
-    <color name="successBgColor">#883BBC7C</color>
 
 </resources>
