--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -8,26 +8,33 @@
         android:name="com.theshoremedia.modules.home.fragment.HomeFragment"
         tools:layout="@layout/fragment_home">
 
-        <action app:destination="@id/nav_about_source" />
+        <action
+            android:id="@+id/actionToAboutSource"
+            app:destination="@id/nav_about_source" />
 
 
-        <action app:destination="@id/nav_search_fragment" />
+        <action
+            android:id="@+id/actionToSearch"
+            app:destination="@id/nav_search_fragment" />
 
 
-        <action app:destination="@id/nav_article" />
     </fragment>
     <fragment
         android:id="@+id/nav_past_checks"
         android:name="com.theshoremedia.modules.factchecks.fragments.PastCheckListFragment"
         tools:layout="@layout/fragment_past_facts_check_list">
-        <action app:destination="@id/nav_article" />
+        <action
+            android:id="@+id/actionToArticle"
+            app:destination="@id/nav_article" />
     </fragment>
     <fragment
         android:id="@+id/nav_favourite"
         android:name="com.theshoremedia.modules.factchecks.fragments.FavouriteArticlesListFragment"
         android:label="@string/bookmark"
         tools:layout="@layout/fragment_past_facts_check_list">
-        <action app:destination="@id/nav_article" />
+        <action
+            android:id="@+id/actionToArticle"
+            app:destination="@id/nav_article" />
     </fragment>
 
     <fragment
@@ -73,6 +80,12 @@
         <argument
             android:name="claim"
             app:argType="string" />
+
+        <action
+            android:id="@+id/actionToArticle"
+            app:destination="@id/nav_article"
+            app:popUpTo="@+id/nav_search_fragment"
+            app:popUpToInclusive="true" />
 
     </fragment>
 
