--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,7 +11,9 @@
         android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/ic_logo"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
+        android:src="@drawable/ic_shore"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -32,7 +34,6 @@
     <TextView
         style="@style/textView"
         android:text="@string/a_layer_of_truth"
-        android:layout_marginTop="@dimen/default_margin"
         android:textSize="@dimen/heading_textsize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
